--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.1",
+    "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.3.4",
+    "@mux/mux-node": "^8.5.0",
+    "@mux/mux-player-react": "^2.5.0",
     "@prisma/client": "^5.12.1",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.16.0",
     "@uploadthing/react": "^6.4.4",
@@ -27,10 +34,13 @@
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "prisma": "^5.12.1",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
