--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.7",
     "@clerk/nextjs": "^4.25.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.3.4",
@@ -42,6 +43,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.7",
     "stripe": "^15.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
