--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clerk": "^0.8.3",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
+    "embla-carousel-react": "^8.1.1",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
     "prisma": "^5.12.1",
