--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "postinstall": "prisma generate",
-    "build": "next build" ,
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.7",
-    "@clerk/nextjs": "^4.25.3",
+    "@auth/prisma-adapter": "^2.1.0",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.3.4",
     "@mux/mux-node": "^8.5.0",
     "@mux/mux-player-react": "^2.5.0",
+    "@neondatabase/serverless": "^0.9.3",
+    "@prisma/adapter-neon": "^5.14.0",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -31,12 +32,12 @@
     "@uploadthing/react": "^6.4.4",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
-    "clerk": "^0.8.3",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "embla-carousel-react": "^8.1.1",
     "lucide-react": "^0.372.0",
     "next": "14.2.2",
+    "next-auth": "^5.0.0-beta.18",
     "prisma": "^5.12.1",
     "query-string": "^9.0.0",
     "react": "^18",
@@ -50,6 +51,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
+    "ws": "^8.17.0",
     "zod": "^3.22.5"
   },
   "devDependencies": {
